stokes_dyn_Janus/stokesian_dynamics/slurm-841835.out
  File "run_simulation.py", line 168
    print(processing_message, end=" ")
                                 ^
SyntaxError: invalid syntax
